# factorio-dsl-compiler

./: .gitignore  README.md  STATUS.md  pyproject.toml
corner_cases/bus/: bus_3.fgr  bus_4.fgr  bus_5.fgr  bus_6.fgr  bus_8.fgr
corner_cases/combo/: butterfly_3.fgr  butterfly_4.fgr  butterfly_5.fgr  butterfly_6.fgr  long_fluid_run_12.fgr  long_fluid_run_16.fgr  long_fluid_run_4.fgr  long_fluid_run_8.fgr  wide_merge_12.fgr  wide_merge_16.fgr  wide_merge_20.fgr  wide_merge_6.fgr  wide_merge_8.fgr
corner_cases/deepchain/: deepchain_12.fgr  deepchain_16.fgr  deepchain_24.fgr  deepchain_32.fgr  deepchain_8.fgr
docs/: INSPIRATION.md  RATES.md  RENDERING.md  V2_DESIGN.md  index.html  rate_analysis.html  report.html
examples/: bus.fgr  circuits.fgr  fanout.fgr  merge.fgr  science.fgr
fgr/: __init__.py  ascii_render.py  blueprint.py  cli.py  dsl.py  encode.py  fbsr_validation.py  flow.py  generators.py  ir.py  layout.py  layout_bank.py  layout_v1.py  layout_v3.py  power.py  rates.py  render.py  solver.py  verify.py
scripts/: _compare_worker.py  audit_specs.py  belt_suite.py  build_pdf.py  build_rate_analysis.py  build_report.py  build_solutions_pdf.py  compare_generators.py  fbsr.sh  gen_gallery.py  get_factorio.sh  independent_check.py  layout_metrics.py  rate_study.py  refresh_corner_case_status.py  scale_boundary.py  simulate.py  stress_complex.py
tests/: test_bank.py  test_blueprint.py  test_complex.py  test_dsl.py  test_examples.py  test_fbsr_validation.py  test_fluids.py  test_generators.py  test_rates.py  test_solver.py  test_stress.py  test_verify.py
(+198 files in other folders)
